--- a/back-end/pom.xml
+++ b/back-end/pom.xml
@@ -48,6 +48,18 @@
 			<version>2.3.1</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- mybatis-plus -->
+		<dependency>
+			<groupId>com.baomidou</groupId>
+			<artifactId>mybatis-plus-boot-starter</artifactId>
+			<version>3.5.3.2</version>
+		</dependency>
+		<!-- mybatis-plus-generator -->
+		<dependency>
+			<groupId>com.baomidou</groupId>
+			<artifactId>mybatis-plus-generator</artifactId>
+			<version>3.5.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
