--- a/back-end/pom.xml
+++ b/back-end/pom.xml
@@ -60,6 +60,11 @@
 			<artifactId>mybatis-plus-generator</artifactId>
 			<version>3.5.3</version>
 		</dependency>
+		<dependency>
+			<groupId>cn.hutool</groupId>
+			<artifactId>hutool-all</artifactId>
+			<version>5.8.16</version>
+		</dependency>
 	</dependencies>
 
 	<build>
