--- a/front-end/package.json
+++ b/front-end/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.8.3",
     "echarts": "^4.9.0",
     "element-ui": "^2.15.14",
+    "jwt-decode": "^4.0.0",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1"
   },
