--- a/back-end/src/main/resources/application.yml
+++ b/back-end/src/main/resources/application.yml
@@ -1,10 +1,10 @@
 server:
-  port: 7000
+  port: 35864
 
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://124.223.74.81:3306/points_demo_db?useSSL=false&useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2b8
-#    url: jdbc:mysql://10.10.10.80:3306/points_db?useSSL=false&useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2b8
+    url: jdbc:mysql://server-kayak.959696.xyz:3306/kayak_db?useSSL=false&useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2b8
+#    url: jdbc:mysql://10.0.0.50:3306/kayak_db?useSSL=false&useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2b8
     username: root
     password: x22OSaQn3nI9pgoH40x
